@@ -25,8 +25,10 @@ Readonly my $DEFAULT_LIST_TYPE => 'all';
 #------------------------------------------------------------------------------
 
 sub opt_spec {
+    my ($self, $app) = @_;
 
-    return (
+    return ( $self->SUPER::opt_spec(),
+
         [ 'noinit'  => 'Do not pull/update from VCS' ],
         [ 'type=s'  => "One of: ( $LIST_TYPES_STRING )" ],
     );
@@ -36,6 +38,8 @@ sub opt_spec {
 
 sub validate_args {
     my ($self, $opts, $args) = @_;
+
+    $self->SUPER::validate_args($opts, $args);
 
     $self->usage_error('Arguments are not allowed') if @{ $args };
 
