@@ -16,8 +16,10 @@ use base 'App::Pinto::Admin::Command';
 #------------------------------------------------------------------------------
 
 sub opt_spec {
+    my ($self, $app) = @_;
 
-    return (
+    return ( $self->SUPER::opt_spec(),
+
         [ 'noinit'  => 'Do not pull/update from VCS' ],
     );
 }
@@ -26,6 +28,8 @@ sub opt_spec {
 
 sub validate_args {
     my ($self, $opts, $args) = @_;
+
+    $self->SUPER::validate_args($opts, $args);
 
     $self->usage_error('Arguments are not allowed') if @{ $args };
 
