@@ -1,5 +1,11 @@
 {{$NEXT}}
 
+     * Interface changes
+
+     The "noinit" parameter has been removed from the repository's
+     configuration file and is now only available on the command
+     line.
+
 0.019     2011-08-24 04:09:41 America/Los_Angeles
 
      * Bug Fixes:
